# PO_LAB5_MSC

./: CMakeLists.txt  FabrykaObiektowSISO.cpp  FabrykaObiektowSISO.h  MenadzerPlikow.cpp  MenadzerPlikow.h  ModelARX.cpp  ModelARX.h  ObiektSISO.h  RegulatorPID.cpp  RegulatorPID.h  main.cpp
Dekoratory/: DekoratorSISORownolegly.cpp  DekoratorSISORownolegly.h  DekoratorSISOSzeregowy.cpp  DekoratorSISOSzeregowy.h
Konfiguracja/: MenadzerKonfiguracji.cpp  MenadzerKonfiguracji.h
Sygnaly/: SumaSygnalow.cpp  SumaSygnalow.h  Sygnal.h  SygnalFabryka.cpp  SygnalFabryka.h  SygnalIO.cpp  SygnalIO.h  SygnalKomponent.cpp  SygnalKomponent.h  SygnalProstokatny.cpp  SygnalProstokatny.h  SygnalSinusoidalny.cpp  SygnalSinusoidalny.h  SygnalStaly.cpp  SygnalStaly.h  SygnalSzumBialy.cpp  SygnalSzumBialy.h  SygnalTrojkatny.cpp  SygnalTrojkatny.h  SygnalZNasyceniem.cpp  SygnalZNasyceniem.h
Testy/: test_zapis_odczyt.cpp  test_zapis_odczyt.h
UI/: InterfejsUzytkownika.cpp  InterfejsUzytkownika.h  KreatorObiektuSISO.cpp  KreatorObiektuSISO.h  MenadzerKonfiguracji.cpp  MenadzerKonfiguracji.h  Menu.cpp  Menu.h  ObslugaWejscia.cpp  ObslugaWejscia.h
